Creado mediante Colaboratory

--- a/2octubre.ipynb
+++ b/2octubre.ipynb
@@ -6,7 +6,7 @@
       "name": "2octubre.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPetZB+Wu+D96zDgkQKrWCr",
+      "authorship_tag": "ABX9TyOqe+jxBkxxXt5En6tMKvU8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,6 +181,104 @@
             "Nacional\n",
             "Mexico\n",
             "ocixeM\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7j3kxp9jEQrg",
+        "outputId": "8b2d6bed-cf3b-41b5-9d0b-17d11538dda4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        }
+      },
+      "source": [
+        "print(bool(0))\n",
+        "print(bool(546546))\n",
+        "flag = 12\n",
+        "print(bool(flag))"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n",
+            "True\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0weOc51RFmWU"
+      },
+      "source": [
+        "#este es un comentario de una línea\n",
+        "\"\"\"\n",
+        "Este\n",
+        "es un comentario\n",
+        "de varias lineas\n",
+        "uwu\n",
+        "\"\"\"\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B4oHhDcQFu8a"
+      },
+      "source": [
+        "#Función PRINT\n",
+        "\n",
+        "hay 4 formas de usar print\n",
+        "\n",
+        "1. Con comas (,)\n",
+        "2. Con signo + (+)\n",
+        "3. Con la función format() de la clase string\n",
+        "4. Con el operador f\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zOqxq0PXGDui",
+        "outputId": "0cc114de-1b40-4c21-e81d-b9e43dcf7ebf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        }
+      },
+      "source": [
+        "#con comas\n",
+        "\n",
+        "cantidad = 2\n",
+        "p_chetos = 8\n",
+        "p_fanta = 12\n",
+        "\n",
+        "print(cantidad, p_chetos, p_fanta)\n",
+        "\n",
+        "#con signo +\n",
+        "print(\"hola\"+\"mundo\")\n",
+        "print(cantidad + p_chetos + p_fanta)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2 8 12\n",
+            "holamundo\n",
+            "22\n"
           ],
           "name": "stdout"
         }
