--- a/26octubre.ipynb
+++ b/26octubre.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "26octubre.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMNw1zOGN3BbyOeobqEWmTW",
+      "authorship_tag": "ABX9TyNJF3ZMbX2/qA+qxwzQAt1G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,37 +28,79 @@
       "cell_type": "code",
       "metadata": {
         "id": "Yf5n3z-4niql",
-        "outputId": "40ce3f3c-af2e-4be2-de5f-76b689dd17f1",
+        "outputId": "2af7665d-5356-428b-f074-60ae8b852b7e",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 316
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "class Array:\n",
-        "  def __init__(self, tamano):\n",
-        "    self.__tamano = tamano\n",
-        "    self.__array=[0 for x in range(self.__tamano)]\n",
+        "  def __init__(self, tam):\n",
+        "    self.__datos = [0 for x in range(tam)]\n",
         "\n",
         "  def get_item(self,index):\n",
-        "    return self.__datos[index]\n",
+        "    dato = 0\n",
+        "    if index >= 0 and index <= len(self.__datos):\n",
+        "      dato = self.__datos[index]\n",
+        "    else: \n",
+        "      print(\"Error en el indice\")\n",
+        "    return dato\n",
+        "\n",
+        "  def set_item(self, dato, index):\n",
+        "    if index >= 0 and index < len(self.__datos):\n",
+        "      self.__datos[index] = dato\n",
+        "    else:\n",
+        "      print(\"Error en el indice\")\n",
+        "\n",
+        "  def getIterator( self ):\n",
+        "        return _getIterator( self.__datos )\n",
+        "\n",
+        "class _getIterator:\n",
+        "    def __init__( self , arreglo ):\n",
+        "        self.__arreglo = arreglo\n",
+        "        self.__indice_actual = 0\n",
+        "\n",
+        "    def __iter__( self ):\n",
+        "        return self\n",
+        "\n",
+        "    def __next__( self  ):\n",
+        "        if self.__indice_actual < len(self.__arreglo):\n",
+        "            dato = self.__arreglo[self.__indice_actual]\n",
+        "            self.__indice_actual +=1\n",
+        "            return dato\n",
+        "        else:\n",
+        "            raise StopIteration\n",
         "\n",
         "mi_arreglo = Array(10)\n",
-        "print(mi_arreglo.get_item(2))\n"
+        "print(mi_arreglo.get_item(20))\n",
+        "mi_arreglo.set_item\n",
+        "print(mi_arreglo.get_item(20))\n",
+        "\n",
+        "\n",
+        "for x in mi_arreglo.getIterator():\n",
+        "  print(x)"
       ],
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-113790c5db27>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mmi_arreglo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mArray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmi_arreglo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_item\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-2-113790c5db27>\u001b[0m in \u001b[0;36mget_item\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mget_item\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__datos\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mmi_arreglo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mArray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Array' object has no attribute '_Array__datos'"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Error en el indice\n",
+            "0\n",
+            "Error en el indice\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
