--- a/26octubre.ipynb
+++ b/26octubre.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "26octubre.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNJF3ZMbX2/qA+qxwzQAt1G",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPMwjvSHkd4ywOBL51juhmm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,9 +29,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Yf5n3z-4niql",
-        "outputId": "2af7665d-5356-428b-f074-60ae8b852b7e",
+        "outputId": "5fb3486a-cb04-422d-a29f-6b593ad4a337",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 401
         }
       },
       "source": [
@@ -80,7 +82,7 @@
         "for x in mi_arreglo.getIterator():\n",
         "  print(x)"
       ],
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,21 +90,145 @@
             "Error en el indice\n",
             "0\n",
             "Error en el indice\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
             "0\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-2bc34f5e57b5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmi_arreglo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetIterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-8-2bc34f5e57b5>\u001b[0m in \u001b[0;36m__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__iter__\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mself\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_getIterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__datos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__next__\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mself\u001b[0m  \u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: '_getIterator' object has no attribute '_getIterator__datos'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zA1Ms0JRTygt"
+      },
+      "source": [
+        "class Empleado:\n",
+        "  def __init__(self, num, nom, pat, mat, he, sb, anio ):\n",
+        "    self.__num_trabajador = num\n",
+        "    self.__nombres = nom\n",
+        "    self.__paterno = pat\n",
+        "    self.__materno = mat\n",
+        "    self.__horas_extra = he\n",
+        "    self.__sueldo_base = sb\n",
+        "    self.__anio_ingreso = anio \n",
+        "\n",
+        "  # get y set\n",
+        "\n",
+        "\n",
+        "\n",
+        "  #metodos de uso general\n",
+        "\n",
+        "  #to_string()\n",
+        "  \n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HBylEid8WHrj",
+        "outputId": "8e170707-ddc1-4f4c-cbda-706486ef457a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "\"\"\"\n",
+        "ADT SUELDOS\n",
+        "\n",
+        "CARGAR DATOS (RUTA DEL ARCHIVO OwO)\n",
+        "\n",
+        "Calcular_sueldos()\n",
+        "reportar_mayor_ant()\n",
+        "reportar_menor_ant()\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "class Sueldos:\n",
+        "  def __init__(self):\n",
+        "    self.__data = None\n",
+        "\n",
+        "  def cargar_datos (self, ruta_archivo):\n",
+        "    archivo = open(ruta_archivo, \"rt\",encoding='latin1')\n",
+        "    lineas = archivo.readlines()\n",
+        "    archivo.close()\n",
+        "    self.__data = Array (len(lineas)-1)\n",
+        "    #Tarea ];-;]\n",
+        "    print(lineas)\n",
+        "    for linea in lineas:\n",
+        "      print(linea)\n",
+        "      #separar campos\n",
+        "      #crear un objeto\n",
+        "      #cargar ese objeto a self.__data.set_item()\n",
+        "\n",
+        "\n",
+        "\n",
+        "ejemplo = Sueldos()    \n",
+        "ejemplo.cargar_datos('junio.dat')"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['numero de trabajador, nombres, paterno, materno, horas extra, sueldo base, aÃ±o de ingreso\\n', '2345,CARLOS,PEREZ,CASTILLO,0,9850,2017\\n', '5754,ANGEL,GOMEZ,GARRIDO,1,9850,2020\\n', '5345,JESUS,MARTIN,SANTOS,2,9850,2016\\n', '3267,DAVID,JIMENEZ,LOZANO,2,9850,2017\\n', '8765,PEDRO,RUIZ,GUERRERO,2,9850,2017\\n', '5454,DANIEL,HERNANDEZ,CANO,3,9850,2018\\n', '3456,ALEJANDRO,DIAZ,PRIETO,2,9850,2018\\n', '3445,MARIA,MORENO,MENDEZ,1,9850,2018\\n', '9088,ALBERTO,MU\\x84OZ,CRUZ,1,9850,2017\\n', '8877,RAFAEL,ALVAREZ,FLORES,2,9850,2017\\n', '6767,FERNANDO,ROMERO,HERRERA,4,9850,2019\\n', '5654,PABLO,ALONSO,GALLEGO,1,9850,2019\\n', '4323,JORGE,GUTIERREZ,MARQUEZ,2,9850,2020\\n', '2232,RAMON,NAVARRO,LEON,1,9850,2016']\n",
+            "numero de trabajador, nombres, paterno, materno, horas extra, sueldo base, aÃ±o de ingreso\n",
+            "\n",
+            "2345,CARLOS,PEREZ,CASTILLO,0,9850,2017\n",
+            "\n",
+            "5754,ANGEL,GOMEZ,GARRIDO,1,9850,2020\n",
+            "\n",
+            "5345,JESUS,MARTIN,SANTOS,2,9850,2016\n",
+            "\n",
+            "3267,DAVID,JIMENEZ,LOZANO,2,9850,2017\n",
+            "\n",
+            "8765,PEDRO,RUIZ,GUERRERO,2,9850,2017\n",
+            "\n",
+            "5454,DANIEL,HERNANDEZ,CANO,3,9850,2018\n",
+            "\n",
+            "3456,ALEJANDRO,DIAZ,PRIETO,2,9850,2018\n",
+            "\n",
+            "3445,MARIA,MORENO,MENDEZ,1,9850,2018\n",
+            "\n",
+            "9088,ALBERTO,MUOZ,CRUZ,1,9850,2017\n",
+            "\n",
+            "8877,RAFAEL,ALVAREZ,FLORES,2,9850,2017\n",
+            "\n",
+            "6767,FERNANDO,ROMERO,HERRERA,4,9850,2019\n",
+            "\n",
+            "5654,PABLO,ALONSO,GALLEGO,1,9850,2019\n",
+            "\n",
+            "4323,JORGE,GUTIERREZ,MARQUEZ,2,9850,2020\n",
+            "\n",
+            "2232,RAMON,NAVARRO,LEON,1,9850,2016\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HCMJPBh4ZSUb"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
