Creado mediante Colaboratory

--- a/6_enero_1358.ipynb
+++ b/6_enero_1358.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "6/enero_1358.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO0lop55+2wd9slx6VGrkM+",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNyL6dafeA2qyPTacf3d5ho",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +55,7 @@
         "      print(f\"|{elem}\",end=\"\")\r\n",
         "    print(\"|\")"
       ],
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -75,12 +76,86 @@
         "    return self.__size\r\n",
         "  \r\n",
         "  def enqueue(self,prioridad, elem):\r\n",
-        "    self.__data.[prioridad].enqueue(elem)\r\n",
+        "    if prioridad <= len(self.__data) and prioridad >= 0:\r\n",
+        "      self.__data[prioridad].enqueue(elem)\r\n",
+        "      self.__size += 1\r\n",
+        "    else:\r\n",
+        "      print(\"Prioridad fuera de rango\")\r\n",
         "\r\n",
+        "  def dequeue(self):\r\n",
+        "    if not self.is_empty():\r\n",
+        "      nivel = 0\r\n",
+        "      while self.__data[nivel].is_empty():\r\n",
+        "        nivel += 1\r\n",
+        "      return self.__data[nivel].dequeue()\r\n",
+        "  \r\n",
+        "  def to_string(self):\r\n",
+        "    cadena = \"\"\r\n",
+        "    for elem in self.__data:\r\n",
+        "      cadena = cadena +\"| \"+ elem\r\n",
+        "    cadena = cadena + \" |\"\r\n",
+        "    return(cadena)\r\n",
         "    "
       ],
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 374
+        },
+        "id": "1YwpNyMg2JlA",
+        "outputId": "fb0371fc-fcaa-468c-f8dd-f43a36d8d16b"
+      },
+      "source": [
+        "cpa = BoundedPriorityQueue( 5 )\r\n",
+        "\"\"\"\r\n",
+        "Prioridad     Nombre\r\n",
+        "\r\n",
+        "2              Diana\r\n",
+        "3              Santiago\r\n",
+        "0              Roberto\r\n",
+        "0              Pedro\r\n",
+        "0              Maria\r\n",
+        "2              Juan\r\n",
+        "3              Mario\r\n",
+        "4              Lopez\r\n",
+        "4              Andrés\r\n",
+        "\r\n",
+        "\r\n",
+        "\"\"\"\r\n",
+        "\r\n",
+        "cpa.enqueue(2,\"Diana\")\r\n",
+        "cpa.to_string()\r\n",
+        "cpa.enqueue(3,\"Santiago\")\r\n",
+        "cpa.enqueue(0,\"Roberto\")\r\n",
+        "cpa.enqueue(0,\"Pedro\")\r\n",
+        "cpa.enqueue(2,\"Maria\")\r\n",
+        "cpa.enqueue(3,\"José\")\r\n",
+        "cpa.enqueue(4,\"Mayra\")\r\n",
+        "cpa.enqueue(4,\"Elena\")\r\n",
+        "cpa.to_string()\r\n",
+        "  \r\n"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-13-f74df6ef4bb4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \"\"\"\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mcpa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menqueue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"Diana\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0mcpa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mcpa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menqueue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"Santiago\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-11-aaae491b41b6>\u001b[0m in \u001b[0;36menqueue\u001b[0;34m(self, prioridad, elem)\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0menqueue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprioridad\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0melem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mprioridad\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__data\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mprioridad\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mprioridad\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menqueue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__size\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-10-cd457439f0aa>\u001b[0m in \u001b[0;36menqueue\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0menqueue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mdequeue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Queue' object has no attribute '_Queue__data'"
+          ]
+        }
+      ]
     }
   ]
 }
