Creado mediante Colaboratory

--- a/18_Enero_1358.ipynb
+++ b/18_Enero_1358.ipynb
@@ -6,7 +6,7 @@
       "name": "18_Enero_1358.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPybAWEuaBs3im2YQT7m9pE",
+      "authorship_tag": "ABX9TyP3WSMaF+Iml5+opKOjgJbv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,10 +72,58 @@
         "        nodo.right = NodoArbol(value, None, None)\r\n",
         "      else:\r\n",
         "        self.__insert__(nodo.right, value)\r\n",
-        "      #ir a la derecha\r\n",
-        "\r\n"
+        "    \r\n",
+        "    def transversal(self, format=\"in\"): #in,pos,pre\r\n",
+        "      if format==\"in\":\r\n",
+        "        self.__recorrido_in(self.__root)\r\n",
+        "      elif format ==\"pre\":\r\n",
+        "        print(\"Recorrido en pre orden\")\r\n",
+        "      elif format == \"pos\":\r\n",
+        "        print(\"Recorrido en pos orden\")\r\n",
+        "      else:\r\n",
+        "        print(\"Formato no válido\")\r\n",
+        "\r\n",
+        "    def __recorrido__in(self, nodo):\r\n",
+        "      if nodo ==None:\r\n",
+        "        print(\"Casobase\")\r\n",
+        "      else:\r\n",
+        "        self:__recorrido__in(nodo.left)\r\n",
+        "        print(nodo.data, end=\",\")\r\n",
+        "        self:__recorrido__in(nodo.right)\r\n",
+        "\r\n",
+        "    def __recorrido__pos(self, nodo):\r\n",
+        "      if nodo ==None:\r\n",
+        "        print(\"Casobase\")\r\n",
+        "      else:\r\n",
+        "        self:__recorrido__in(nodo.left)\r\n",
+        "        print(nodo.data, end=\",\")\r\n",
+        "        self:__recorrido__in(nodo.right)\r\n",
+        "    \r\n",
+        "    def __recorrido__pre(self, nodo):\r\n",
+        "      if nodo ==None:\r\n",
+        "        print(\"Casobase\")\r\n",
+        "      else:\r\n",
+        "        self:__recorrido__in(nodo.left)\r\n",
+        "        print(nodo.data, end=\",\")\r\n",
+        "        self:__recorrido__in(nodo.right)\r\n",
+        "\r\n",
+        "    def __search(self,value):\r\n",
+        "      if self.__root == None:\r\n",
+        "        return None\r\n",
+        "      elif nodo.data == value:\r\n",
+        "        return nodo \r\n",
+        "      elif value < nodo.data:\r\n",
+        "        return self.__search(nodo.left, value)\r\n",
+        "      else:\r\n",
+        "        return self.__search(nodo.right, value)\r\n",
+        "    \r\n",
+        "    def search(self,value):\r\n",
+        "      if self.__root ==None:\r\n",
+        "        print(\"Árbol vacío\")\r\n",
+        "      else:\r\n",
+        "        return self.__search(self.__root, value)\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -88,9 +136,12 @@
         "\r\n",
         "abb.insert(40)\r\n",
         "abb.insert(30)\r\n",
-        "abb.insert(20)\r\n"
+        "abb.insert(20)\r\n",
+        "abb.transversal()\r\n",
+        "abb.transversal(\"pre\")\r\n",
+        "abb.transversal(\"pos\")\r\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     }
   ]
