Creado mediante Colaboratory

--- a/18_Enero_1358.ipynb
+++ b/18_Enero_1358.ipynb
@@ -6,7 +6,7 @@
       "name": "18_Enero_1358.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP3WSMaF+Iml5+opKOjgJbv",
+      "authorship_tag": "ABX9TyO3HKomUHvck2nyr29iGI4Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,15 +121,66 @@
         "      if self.__root ==None:\r\n",
         "        print(\"Árbol vacío\")\r\n",
         "      else:\r\n",
-        "        return self.__search(self.__root, value)\r\n"
+        "        return self.__search(self.__root, value)\r\n",
+        "    def remove (self, value):\r\n",
+        "      if self.root ==None:\r\n",
+        "        print(\"Arbol vacío\")\r\n",
+        "      else:\r\n",
+        "        self.__remove(None, None, self.__root, value)\r\n",
+        "\r\n",
+        "    def __remove(self, padre_hi, padre_hd, actual, value):\r\n",
+        "      if actaul ==None:\r\n",
+        "         print(\"Caso base\")\r\n",
+        "         return None\r\n",
+        "      elif actual.data == value:\r\n",
+        "        print(\"\\Encontrado\", actual.data)\r\n",
+        "          if actual.left == None and actual.right == None:\r\n",
+        "            if padre_hi != None:\r\n",
+        "              padre_hi.left = None\r\n",
+        "            else:\r\n",
+        "              padre_hd.right = None\r\n",
+        "\r\n",
+        "          elif (actaul.left != None and actual.right == None) or (actual.left ==):\r\n",
+        "            if actaul.left != None:\r\n",
+        "              aux = actual.left\r\n",
+        "              actual.left = None\r\n",
+        "              actual = aux\r\n",
+        "            else:\r\n",
+        "              print(\"Hijo a la derecha\", actual.right)\r\n",
+        "              aux = actual.right\r\n",
+        "              actual.right = None\r\n",
+        "              actual = aux\r\n",
+        "\r\n",
+        "\r\n",
+        "        return actual\r\n",
+        "      elif value < actual.dada:\r\n",
+        "        self.__remove(actual, None, actual.left, value)\r\n",
+        "      else:\r\n",
+        "        self.__remove(None, actual, actual.right, value)"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sR4jgznkdIo2"
+        "id": "0jpEsYvNZy0Z"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sR4jgznkdIo2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 350
+        },
+        "outputId": "abcb9c06-3271-45b7-c1bb-a9e4ac0b063c"
       },
       "source": [
         "abb = ArbolBinarioBusqueda()\r\n",
@@ -139,10 +190,25 @@
         "abb.insert(20)\r\n",
         "abb.transversal()\r\n",
         "abb.transversal(\"pre\")\r\n",
-        "abb.transversal(\"pos\")\r\n"
+        "abb.transversal(\"pos\")\r\n",
+        "res = abb.search(70)\r\n",
+        "abb.remove(70)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-a07e2e6ae284>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mabb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mArbolBinarioBusqueda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mabb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mabb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mabb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-3-d905811f3531>\u001b[0m in \u001b[0;36minsert\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__root\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__root\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNodoArbol\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__insert__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__root\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'NodoArbol' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
